# shadow-kit

./: CLAUDE.md.template  LICENSE  README.md  __init__.py  pyproject.toml
core/: __init__.py
docs/: agent-failure-modes.md  distribution-launch-pack.md  index.html
examples/: basic_assistant.py
harness/: _runtime.md
harness/contracts/: action_deferral.md  completion_integrity.md  loop_prevention.md  pre_denial_gate.md  topic_overrun.md  verify_before_push.md
harness/failure_modes/: taxonomy.md
harness/skills/: _template.md  code_review.md  research.md
shadow_kit/: __init__.py  cli.py  contracts.py  demo.py  receipts.py
tests/: test_cli.py  test_contracts.py  test_demo.py  test_receipts.py
