[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadow-kit"
version = "0.1.0"
description = "Battle-tested contract enforcement and failure mode taxonomy for AI agent harnesses"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["cryptography>=42.0"]
keywords = ["ai", "agent", "harness", "contracts", "claude", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
shadow-kit = "shadow_kit.cli:main"

[tool.setuptools.packages.find]
include = ["shadow_kit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
